refactor(merger): renamed interfaces
